--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -1,8 +1,13 @@
 framework:
-    validation:
-        email_validation_mode: html5
+  validation:
+    email_validation_mode: html5
+    enabled: true
+    enable_annotations: false
+    mapping:
+      paths:
+        - "%kernel.project_dir%/config/validation/"
 
-        # Enables validator auto-mapping support.
-        # For instance, basic validation constraints will be inferred from Doctrine's metadata.
-        #auto_mapping:
-        #    App\Entity\: []
+    # Enables validator auto-mapping support.
+    # For instance, basic validation constraints will be inferred from Doctrine's metadata.
+    #auto_mapping:
+    #    App\Entity\: []
